force-app/main/default/objects/Credentials__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <type>TextArea</type>
</CustomField>