force-app/main/default/objects/Credentials__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <label>Security Token</label>
    <type>TextArea</type>
</CustomField>